[package]
name = "neebu_emu"
version = "0.1.0"
authors = ["narwhal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
mpsc_requests = "0.3.3"

[features]
serialize = ["serde", "serde_derive"]
